src/objects/MC4SF__MC_Subscriber__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Daylight_Savings_GMT_Offset__c</fullName>
        <label>Daylight Savings GMT Offset</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Email2__c</fullName>
        <externalId>true</externalId>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MC4SF__Email_Address__c</fullName>
        <label>XXXEmail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MC4SF__Email_Type__c</fullName>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>html</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__GMT_Offset__c</fullName>
        <label>GMT Offset</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Geographic_Location__c</fullName>
        <label>Geographic Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MC4SF__Golden_Monkey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golden Monkey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__IP_Opt__c</fullName>
        <label>IP Opt</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__IP_Signup__c</fullName>
        <label>IP Signup</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Info_Changed__c</fullName>
        <label>Info Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Interests__c</fullName>
        <label>Interests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Language__c</fullName>
        <label>Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <summarizedField>MC4SF__MC_Subscriber_Activity__c.MC4SF__Timestamp__c</summarizedField>
        <summaryForeignKey>MC4SF__MC_Subscriber_Activity__c.MC4SF__MC_Subscriber__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Activity_Sync_Date__c</fullName>
        <label>Last Activity Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Lead_Validation_Errors__c</fullName>
        <inlineHelpText>If there was an MC4SF application error with this record, it will be captured here.</inlineHelpText>
        <label>Validation/Sync Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Lists__c</fullName>
        <label>Audiences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Audience</label>
        <referenceTo>MC4SF__MC_List__c</referenceTo>
        <relationshipLabel>MC Subscribers</relationshipLabel>
        <relationshipName>MC_Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_Campaign_ID__c</fullName>
        <label>MailChimp Campaign ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_ID__c</fullName>
        <label>MailChimp ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_List_ID__c</fullName>
        <label>MailChimp Audience ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Member_Rating_Image__c</fullName>
        <formula>IMAGE(  CASE(MC4SF__Member_Rating__c,  1, &quot;/img/samples/stars_100.gif&quot;, 2, &quot;/img/samples/stars_200.gif&quot;, 3, &quot;/img/samples/stars_300.gif&quot;,  4, &quot;/img/samples/stars_400.gif&quot;,  5, &quot;/img/samples/stars_500.gif&quot;,  &quot;/img/samples/stars_000.gif&quot;),  &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Member_Rating__c</fullName>
        <label>Member Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Member_Status__c</fullName>
        <label>Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Cleaned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__Merge0__c</fullName>
        <label>Merge0</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Merge10__c</fullName>
        <label>Merge10</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Merge11__c</fullName>
        <label>Merge11</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Old_Email__c</fullName>
        <label>Old Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MC4SF__Parent_MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>MC Subscribers</relationshipLabel>
        <relationshipName>MC_Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC4SF__Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Static_Segments__c</fullName>
        <label>Static Segments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Status_Reason_Text__c</fullName>
        <label>Status Reason Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Status_Timestamp__c</fullName>
        <label>Status Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Subscriber_Last_Modified_Since_Sync_Date__c</fullName>
        <label>Subscriber Last Modified Since Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Timestamp_Opt__c</fullName>
        <label>Timestamp Opt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Timestamp_Signup__c</fullName>
        <label>Timestamp Signup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Topic_Assigned_Since_Sync_Date__c</fullName>
        <label>Topic Assigned Since Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__View_Subscriber_in_MC__c</fullName>
        <formula>IF(ISBLANK(MC4SF__Web_ID__c), &quot;&quot;,
HYPERLINK(&quot;https://&quot; &amp;  $Setup.MC4SF__Global_Settings__c.MC4SF__Data_Center__c &amp; &quot;.admin.mailchimp.com/lists/members/view?id=&quot; &amp;  TEXT(MC4SF__Web_ID__c) , &quot;View Subscriber in MC&quot;)
)</formula>
        <label>View Subscriber in MC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Web_ID__c</fullName>
        <label>Web ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MC Subscriber</label>
    <listViews>
        <fullName>MC4SF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MC Subscriber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>